# kafka_plugin

./: CMakeLists.txt  kafka_plugin.cpp  kafka_producer.cpp
include/eosio/kafka_plugin/: kafka_plugin.hpp
